--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,14 @@
-Package: Proporciones
+Package: Proporcion
 Type: Package
-Title: What the Package Does (Title Case)
-Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Title: Gráfico y proporciones de habitats y grupos funcionales
+Version: 0.1.0.9000
+Autors@R: person("Iara D.", "Rodriguez", email="irodriguez@campus.edu.ar", role=("aut"))
+Description: Este paquete calcula la proporción de cada habitat y grupo funcional de una comunidad
+License: MIT
 Encoding: UTF-8
 LazyData: true
+Depends: R (>= 3.4.4)
+Imports: 
+URL: https://github.com/123iamela/HabitatGrupofuncional.git
+Bugreport: https://github.com/123iamela/HabitatGrupofuncional/issues
+RoxygenNote: 6.0.1
