--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,17 @@
-Package: Proporcion
+Package: Proporciones
 Type: Package
 Title: Gráfico y proporciones de habitats y grupos funcionales
 Version: 0.1.0.9000
 Autors@R: person("Iara D.", "Rodriguez", email="irodriguez@campus.edu.ar", role=("aut"))
-Description: Este paquete calcula la proporción de cada habitat y grupo funcional de una comunidad
+Description: Este paquete calcula la proporción de cada habitat y grupo funcional de un ecosistema.
 License: MIT
 Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.4.4)
 Imports: 
-URL: https://github.com/123iamela/HabitatGrupofuncional.git
-Bugreport: https://github.com/123iamela/HabitatGrupofuncional/issues
+ dplyr (>= 0.7.6),
+ ggplot2 (>= 3.0.0),
+ knitr (>= 1.20)
+URL: https://github.com/123iamela/ProporcionesHFG.git
+Bugreport: https://github.com/123iamela/ProporcionesHFG/issues
 RoxygenNote: 6.0.1
