Corrección de errores

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,8 @@ Package: Proporciones
 Type: Package
 Title: Gráfico y proporción de habitats y grupos funcionales
 Version: 0.1.0.9000
-Autors@R: person("Iara D.", "Rodriguez", email="irodriguez@campus.edu.ar", role=("aut"))
+Author: person("Iara D.", "Rodriguez", email="irodriguez@campus.edu.ar", role=("aut"))
+Maintainer: Iara D. Rodriguez <irodriguez@campus.ungs.edu.ar>
 Description: Este paquete calcula y grafica la proporción de cada categoría de habitat y grupo funcional de un ecosistema.
 License: MIT
 Encoding: UTF-8
@@ -10,8 +11,7 @@ LazyData: true
 Depends: R (>= 3.4.4)
 Imports: 
  dplyr (>= 0.7.6),
- ggplot2 (>= 3.0.0),
- knitr (>= 1.20)
+ ggplot2 (>= 3.0.0)
 URL: https://github.com/123iamela/ProporcionesHFG.git
 Bugreport: https://github.com/123iamela/ProporcionesHFG/issues
 RoxygenNote: 6.1.0
