--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,8 +10,8 @@ Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.4.4)
 Imports:
-  devtools::use_package("dplyr")
-  devtools::use_package("ggplot2")
+  dplyr (>= 0.7.6),
+  ggplot2 (>= 3.0.0)
 URL: https://github.com/123iamela/ProporcionesHFG.git
 Bugreport: https://github.com/123iamela/ProporcionesHFG/issues
 RoxygenNote: 6.1.0.9000
