--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,7 +8,7 @@ export(readFile)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,group_by)
 importFrom(dplyr,mutate)
-importFrom(dplyr,summarise)
+importFrom(dplyr,summarize)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_fill_brewer)
