--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,4 @@ importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_fill_brewer)
 importFrom(ggplot2,theme_bw)
+importFrom(utils,read.delim)
