--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ importFrom(dplyr,summarize)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_bar)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,position_dodge)
 importFrom(ggplot2,scale_fill_brewer)
 importFrom(ggplot2,theme_bw)
 importFrom(utils,read.delim)
